Add bomb and flags with ampresand methods

--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 #container {
   margin: 150px auto;
-/*  border: 1px black solid;
-*/
 }
-
 
 .grid {
   float: left;
   width: 20px;
   height: 20px;
   border: 3px outset;
+  text-align: center;
+  line-height: 20px;
 }
 
 .active {
